test/distributions/sungeun/dataPar1.badTasksPerLocale.good
dataPar1.chpl:1: error: halt reached - dataParTasksPerLocale must be >= 0
